--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@mui/material": "^7.0.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
+    "nodemailer": "^7.0.12",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
