--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemailer": "^7.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.13.0",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
