--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "nodemailer": "^7.0.12",
-    "pg": "^8.17.2"
+    "pg": "^8.17.2",
+    "resend": "^6.9.1"
   }
 }
