--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.0.2",
     "html2canvas": "^1.4.1",
     "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
     "nodemailer": "^7.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
