--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "nodemailer": "^7.0.12",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.13.0",
